Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13797

InnoDB may hang if shutdown is initiated soon after startup, while rolling back recovered incomplete transactions

    XMLWordPrintable

Details

    • 10.2.11

    Description

      A user running mariabackup from 10.1.25 is seeing the tool hang while preparing an incremental backup. It seems to hang while attempting to rollback some transactions. The log contains information such as the following:

      InnoDB: Starting in background the rollback of recovered transactions
      2017-09-05 10:39:24 7fe54ab38700  InnoDB: Rolling back trx with id 614757352, 0 rows to undo
      InnoDB: Waiting for purge to start
      InnoDB: Rollback of trx with id 614757352 completed
      2017-09-05 10:39:24 7fe54ab38700  InnoDB: Rolling back trx with id 614757351, 0 rows to undo
      InnoDB: Rollback of trx with id 614757351 completed
      2017-09-05 10:39:24 7fe54ab38700  InnoDB: Rolling back trx with id 614757350, 4 rows to undo
      InnoDB:  Percona XtraDB (http://www.percona.com) 5.6.36-82.0 started; log sequence number 7128840461184
      InnoDB: Rollback of trx with id 614757350 completed
      2017-09-05 10:39:24 7fe54ab38700  InnoDB: Rolling back trx with id 614757349, 192 rows to undo
      InnoDB: Dumping buffer pool(s) not yet started
      InnoDB: Last MySQL binlog file position 0 359629094, file name /data/replication/binlogs/mysql-bin.005032
       
      xtrabackup: starting shutdown with innodb_fast_shutdown = 1
      InnoDB: FTS optimize thread exiting.
      InnoDB: Starting shutdown...
      InnoDB: Rollback of trx with id 614757349 completed
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      InnoDB: Waiting for rollback of recovered transactions to exit
      

      According to gdb, it looks like the rollback thread might be waiting on a mutex:

      Thread 4 (Thread 0x7fe54ab38700 (LWP 1168)):
      #0 mutex_enter_func (line=770, file_name=0x55c9275a9c10 "/opt/install/mariadb-10.1.25/storage/xtradb/trx/trx0roll.cc", mutex=0x7fe55c3d0068) at /opt/install/mariadb-10.1.25/storage/xtradb/include/sync0sync.ic:268
      #1 pfs_mutex_enter_func (line=770, file_name=0x55c9275a9c10 "/opt/install/mariadb-10.1.25/storage/xtradb/trx/trx0roll.cc", mutex=0x7fe55c3d0068) at /opt/install/mariadb-10.1.25/storage/xtradb/include/sync0sync.ic:381
      #2 trx_rollback_or_clean_recovered (all=<optimized out>, all@entry=1) at /opt/install/mariadb-10.1.25/storage/xtradb/trx/trx0roll.cc:770
      #3 0x000055c927303759 in trx_rollback_or_clean_all_recovered (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/trx/trx0roll.cc:828
      #4 0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #5 0x00007fe55f02534d in clone () from /lib64/libc.so.6
      

      Here is the full backtrace for all threads:

       
      Thread 14 (Thread 0x7fe55abfe700 (LWP 1156)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b4993c0, cond=0x7fe55b4993f8) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b4993c0, reset_sig_count=1, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=0, message1=message1@entry=0x7fe55abfdd40, message2=message2@entry=0x7fe55abfdd48, type=type@entry=0x7fe55abfdd50, 
          space_id=space_id@entry=0x7fe55abfdd58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 13 (Thread 0x7fe55b3ff700 (LWP 1157)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b499350, cond=0x7fe55b499388) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b499350, reset_sig_count=4, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=1, message1=message1@entry=0x7fe55b3fed40, message2=message2@entry=0x7fe55b3fed48, type=type@entry=0x7fe55b3fed50, 
          space_id=space_id@entry=0x7fe55b3fed58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=1) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 12 (Thread 0x7fe55a3fd700 (LWP 1158)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b4992e0, cond=0x7fe55b499318) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b4992e0, reset_sig_count=45, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=2, message1=message1@entry=0x7fe55a3fcd40, message2=message2@entry=0x7fe55a3fcd48, type=type@entry=0x7fe55a3fcd50, 
          space_id=space_id@entry=0x7fe55a3fcd58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=2) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 11 (Thread 0x7fe559bfc700 (LWP 1159)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b499270, cond=0x7fe55b4992a8) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b499270, reset_sig_count=72, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=3, message1=message1@entry=0x7fe559bfbd40, message2=message2@entry=0x7fe559bfbd48, type=type@entry=0x7fe559bfbd50, 
          space_id=space_id@entry=0x7fe559bfbd58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=3) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 10 (Thread 0x7fe54e33f700 (LWP 1160)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b499200, cond=0x7fe55b499238) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b499200, reset_sig_count=19, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=4, message1=message1@entry=0x7fe54e33ed40, message2=message2@entry=0x7fe54e33ed48, type=type@entry=0x7fe54e33ed50, 
          space_id=space_id@entry=0x7fe54e33ed58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=4) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 9 (Thread 0x7fe54db3e700 (LWP 1161)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b499190, cond=0x7fe55b4991c8) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b499190, reset_sig_count=117, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=5, message1=message1@entry=0x7fe54db3dd40, message2=message2@entry=0x7fe54db3dd48, type=type@entry=0x7fe54db3dd50, 
          space_id=space_id@entry=0x7fe54db3dd58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=5) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 8 (Thread 0x7fe54d33d700 (LWP 1162)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b499120, cond=0x7fe55b499158) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b499120, reset_sig_count=119, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=6, message1=message1@entry=0x7fe54d33cd40, message2=message2@entry=0x7fe54d33cd48, type=type@entry=0x7fe54d33cd50, 
          space_id=space_id@entry=0x7fe54d33cd58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=6) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 7 (Thread 0x7fe54cb3c700 (LWP 1163)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b4990b0, cond=0x7fe55b4990e8) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b4990b0, reset_sig_count=114, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=7, message1=message1@entry=0x7fe54cb3bd40, message2=message2@entry=0x7fe54cb3bd48, type=type@entry=0x7fe54cb3bd50, 
          space_id=space_id@entry=0x7fe54cb3bd58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=7) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 6 (Thread 0x7fe54c33b700 (LWP 1164)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b499040, cond=0x7fe55b499078) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b499040, reset_sig_count=128, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=8, message1=message1@entry=0x7fe54c33ad40, message2=message2@entry=0x7fe54c33ad48, type=type@entry=0x7fe54c33ad50, 
          space_id=space_id@entry=0x7fe54c33ad58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=8) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 5 (Thread 0x7fe54bb3a700 (LWP 1165)):
      #0  0x00007fe560c99945 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x000055c927284feb in os_cond_wait (fast_mutex=0x7fe55b498fd0, cond=0x7fe55b499008) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:196
      #2  os_event_wait_low (event=0x7fe55b498fd0, reset_sig_count=109, reset_sig_count@entry=0) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0sync.cc:477
      #3  0x000055c9272839d4 in os_aio_simulated_handle (global_segment=global_segment@entry=9, message1=message1@entry=0x7fe54bb39d40, message2=message2@entry=0x7fe54bb39d48, type=type@entry=0x7fe54bb39d50, 
          space_id=space_id@entry=0x7fe54bb39d58) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0file.cc:5974
      #4  0x000055c9271dba6a in fil_aio_wait (segment=segment@entry=9) at /opt/install/mariadb-10.1.25/storage/xtradb/fil/fil0fil.cc:6512
      #5  0x000055c9272ec658 in io_handler_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:586
      #6  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 4 (Thread 0x7fe54ab38700 (LWP 1168)):
      #0  mutex_enter_func (line=770, file_name=0x55c9275a9c10 "/opt/install/mariadb-10.1.25/storage/xtradb/trx/trx0roll.cc", mutex=0x7fe55c3d0068) at /opt/install/mariadb-10.1.25/storage/xtradb/include/sync0sync.ic:268
      #1  pfs_mutex_enter_func (line=770, file_name=0x55c9275a9c10 "/opt/install/mariadb-10.1.25/storage/xtradb/trx/trx0roll.cc", mutex=0x7fe55c3d0068) at /opt/install/mariadb-10.1.25/storage/xtradb/include/sync0sync.ic:381
      #2  trx_rollback_or_clean_recovered (all=<optimized out>, all@entry=1) at /opt/install/mariadb-10.1.25/storage/xtradb/trx/trx0roll.cc:770
      #3  0x000055c927303759 in trx_rollback_or_clean_all_recovered (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/trx/trx0roll.cc:828
      #4  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #5  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 3 (Thread 0x7fe547331700 (LWP 1175)):
      #0  0x00007fe55f01c7a3 in select () from /lib64/libc.so.6
      #1  0x000055c92728587b in os_thread_sleep (tm=tm@entry=100000) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0thread.cc:307
      #2  0x000055c9271a3fa2 in buf_flush_page_cleaner_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/buf/buf0flu.cc:2871
      #3  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #4  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 2 (Thread 0x7fe546b30700 (LWP 1176)):
      #0  0x00007fe55f01c7a3 in select () from /lib64/libc.so.6
      #1  0x000055c92728587b in os_thread_sleep (tm=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0thread.cc:307
      #2  0x000055c92719dfde in page_cleaner_sleep_if_needed (next_loop_time=next_loop_time@entry=1504629392984) at /opt/install/mariadb-10.1.25/storage/xtradb/buf/buf0flu.cc:2668
      #3  0x000055c9271a48ff in page_cleaner_sleep_if_needed (next_loop_time=1504629392984) at /opt/install/mariadb-10.1.25/storage/xtradb/buf/buf0flu.cc:2956
      #4  buf_flush_lru_manager_thread (arg=<optimized out>) at /opt/install/mariadb-10.1.25/storage/xtradb/buf/buf0flu.cc:2958
      #5  0x00007fe560c95e25 in start_thread () from /lib64/libpthread.so.0
      #6  0x00007fe55f02534d in clone () from /lib64/libc.so.6
       
      Thread 1 (Thread 0x7fe56107f8c0 (LWP 1148)):
      #0  0x00007fe55f01c7a3 in select () from /lib64/libc.so.6
      #1  0x000055c92728587b in os_thread_sleep (tm=tm@entry=100000) at /opt/install/mariadb-10.1.25/storage/xtradb/os/os0thread.cc:307
      #2  0x000055c927269aef in logs_empty_and_mark_files_at_shutdown () at /opt/install/mariadb-10.1.25/storage/xtradb/log/log0log.cc:3555
      #3  0x000055c9272f0ee4 in innodb_shutdown () at /opt/install/mariadb-10.1.25/storage/xtradb/srv/srv0start.cc:3208
      #4  0x000055c926e2f575 in innodb_end () at /opt/install/mariadb-10.1.25/extra/mariabackup/xtrabackup.cc:1760
      #5  0x000055c926e16a55 in xtrabackup_prepare_func (argv=<optimized out>, argc=<optimized out>) at /opt/install/mariadb-10.1.25/extra/mariabackup/xtrabackup.cc:6021
      #6  main (argc=<optimized out>, argv=<optimized out>) at /opt/install/mariadb-10.1.25/extra/mariabackup/xtrabackup.cc:6658
      

      The utility was run in the following way:

      Full backup:

      mariabackup --defaults-file=/etc/my.cnf.d/server.cnf --user=root --backup --target-dir=/path/to/backup/full --safe-slave-backup --slave-info --open-files-limit=65535 --host=127.0.0.1 --port=3306

      Incremental backup:

      mariabackup --defaults-file=/etc/my.cnf.d/server.cnf --user=root --backup --incremental-force-scan --safe-slave-backup --slave-info --open-files-limit=65535 --incremental-basedir=/path/to/backup/full --target-dir=/path/to/backup/incr --host=127.0.0.1 --port=3306

      Full prepare:

      mariabackup --defaults-file=/etc/my.cnf.d/server.cnf --prepare --apply-log-only --target-dir=/path/to/backup/full

      Incremental prepare (which hangs):

      mariabackup --defaults-file=/etc/my.cnf.d/server.cnf --prepare --apply-log-only --target-dir=/path/to/backup/full --incremental-dir=/path/to/backup/incr

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              GeoffMontee Geoff Montee (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.